    Thanks to Andrew Bickerton for correcting the document.write append problem.

Problems fixed:
    1. ServletUnit was creating a new session if the current one was not valid, even if "create" was not specified.
    2. calling document.write on a closed document was appending to rather than replacing its contents.

Additions:
    1. PseudoServer now handles persistent connections.

 17-Mar-2003
Problems fixed:
    1. The Content-Length header was not being sent with requests in ServletUnit.
    2. ServletUnit's HttpServletRequest.getIntHeader() always returned -1.

 16-Mar-2003
Acknowledgements:
    Thanks to Brendan Boesen for adding a method to access session IDs in ServletUnitContext.

Additions:
    1. You can now get at the stored session IDs in ServletUnitContext.
    2. ServletUnit now supports HttpServletRequest.getRequestDispatch()

Notes:
    1. The acceptCookies, acceptGzip, autoRefresh and autoForward properties have been moved from HttpUnitOptions to ClientProperties,
       permitting them to be set per WebClient rather than just globally. The old properties have been deprecated,
       and now access the defaults for ClientProperties. Tests which set the HttpUnitOptions properties before creating
       their WebClients will be unaffected.

 14-Mar-2003
Problems fixed:
    1. When loading a page triggered a script function which redirected to a new page in the same frame,
       the WebResponse returned from getResponse was the triggering page. It is now the redirected page.

 13-Mar-2003
Additions:
    1. Select.value is now supported.
    2. Added WebForm.getButton() method using HTMLPredicate to permit more generalized button searches.

 12-Mar-2003
Acknowledgements:
    Thanks to Daniel Jasmin for fixing the handling of applet loading from archives.

Problems fixed:
    1. Applets were not loading properly from applets if a codebase was specified in the <applet> tag.